# Soul-Mates

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE
cmake/: ApplicationInfo.cmake
include/: Application.h
source/: Application.cpp  Main.cpp
